--- a/style.css
+++ b/style.css
@@ -3,11 +3,62 @@ html{
     padding: 0;
 }
 
+body{
+    background: #eff28f;
+    transition: 0.8s;
+}
+
 hr{
     border: none;
     height: 2px;
     background: #585656;
     box-shadow: 0 5px 10px #585656;
+}
+
+.wrapper{
+    position: relative;
+}
+
+.change-theme-wrap{
+    position: absolute;
+    top:0;
+    left:10px;
+    display: flex;
+}
+
+.change-theme{
+    cursor: pointer;
+    margin-right: 10px;
+    border:1px solid #c9ae34;
+    color: #705D07;
+    border-radius: 3px 3px 3px 3px;
+    -webkit-border-radius: 3px 3px 3px 3px;
+    -moz-border-radius: 3px 3px 3px 3px;
+    width: auto;
+    height: auto;
+    font-size: 16px;
+    padding: 8px 41px;
+    box-shadow: inset 0px 0px 0px 0 #fff6ce,inset 0 -1px 0 0 #e3c852,inset 0 0 0 1px #fce88d,2px 5px 3px 0 #D4D4D4;
+    -moz-box-shadow: inset 0px 0px 0px 0 #fff6ce,inset 0 -1px 0 0 #e3c852,inset 0 0 0 1px #fce88d,2px 5px 3px 0 #D4D4D4;
+    -webkit-box-shadow: inset 0px 0px 0px 0 #fff6ce,inset 0 -1px 0 0 #e3c852,inset 0 0 0 1px #fce88d,2px 5px 3px 0 #D4D4D4;
+    text-shadow: 0px 0px 0px #fff;
+    background-image: linear-gradient(to top, #fce374, #fcdf5b);
+    background-color: #fce374;
+}
+
+.change-theme:hover{
+    border:1px solid #967d09;
+    color: #705D07;
+    box-shadow: inset 0 1px 0 0 #fff6ce,inset 0 -1px 0 0 #e3c852,inset 0 0 0 1px #fce88d;
+    -moz-box-shadow: inset 0 1px 0 0 #fff6ce,inset 0 -1px 0 0 #e3c852,inset 0 0 0 1px #fce88d;
+    -webkit-box-shadow: inset 0 1px 0 0 #fff6ce,inset 0 -1px 0 0 #e3c852,inset 0 0 0 1px #fce88d;
+    background-color: #fcdf5b;
+    transition: 0.3s;
+}
+
+.change-theme-active{
+    border: 2px solid black;
+    transition: 0.4s;
 }
 
 .resultclass{
